fix(android): harden VPN startup and release 0.3.2